--- a/DQN_project_MVA.ipynb
+++ b/DQN_project_MVA.ipynb
@@ -683,7 +683,7 @@
     "$$Q^\\pi(s,a)=E_{(s_1,a_1)\\sim p(.|s_0,a_0)}[r(s_{0},a_{0})+E_{p^{\\pi}}[\\gamma \\sum_{t\\leq T-1}\\gamma^{t}r(s_{t+1},a_{t+1})|s_1,s_2]|s_{0}=s,a_{0}=a] \\> .\n",
     "$$\n",
     "Hence,\n",
-    "$$Q^\\pi(s,a)=E_{(s_1,a_1)\\sim p(.|s,a)}[r(s_{0},a_{0})+E_{p^{\\pi}}[\\gamma \\sum_{t\\leq T-1}\\gamma^{t}r(s_{t+1},a_{t+1})|s_1,s_2]|s_{0}=s,a_{0}=a] \\> .\n",
+    "$$Q^\\pi(s,a)=E_{(s_1,a_1)\\sim p(.|s,a)}[r(s,a)+E_{p^{\\pi}}[\\gamma \\sum_{t\\leq T-1}\\gamma^{t}r(s_{t+1},a_{t+1})|s_1,s_2]|s_{0}=s,a_{0}=a] \\> .\n",
     "$$\n",
     "And finally, thank to some basic graphical model properties,\n",
     "$$Q^\\pi(s,a)=E_{(s_1,a_1)\\sim p(.|s,a)}[r(s,a)+E_{p^{\\pi}}[\\gamma \\sum_{t\\leq T-1}\\gamma^{t}r(s_{t+1},a_{t+1})|s_1,s_2]] \\> .\n",
